--- a/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "  "
 author: "your name here"
 date: "00/00/2021"
 output: "pdf_document"
@@ -9,7 +9,7 @@ fontsize: 12pt
 ```{r setup, include=FALSE}
 library(formatR)
 options(width=90)
-knitr::opts_chunk$set(echo = TRUE,out.width = 40, tidy=T, tidy.opts=list(width.cutoff=73))
+knitr::opts_chunk$set(echo = TRUE, tidy=T, tidy.opts=list(width.cutoff=73))
 ```
 
 ```{r library essential packages}
